--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>haohuo-gateway-app</module>
         <module>haohuo-service</module>
         <module>haohuo-service-api</module>
+        <module>haohuo-test</module>
     </modules>
     <packaging>pom</packaging>
     <description>好货商城微服务版本(Spring Cloud Alibaba)</description>
