--- a/haohuo-test/pom.xml
+++ b/haohuo-test/pom.xml
@@ -10,11 +10,18 @@
     </parent>
 
     <artifactId>haohuo-test</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>haohuo-test-refactor</module>
+    </modules>
 
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <dependencies>
+        <!--依赖common-->
+        <dependency>
+            <groupId>com.ebanma.cloud</groupId>
+            <artifactId>haohuo-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
